fdo#35091 do not honour ForceFocusAndToFront preference for preview